--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+}
+
+/* Стиль для формы запроса */
 .search-form {
     display: flex;
     justify-content: center;
@@ -8,6 +13,102 @@
     padding-bottom: 10px;
 }
 
+/* Стиль для скрытия кнопки More photos */
 .js-hidden {
     display: none;
+}
+
+/* Стиль контейнера кнопки More photos */
+.container {
+    display: flex;
+    align-items: center;
+}
+/* Стиль для кнопки More photos */
+.btn-more {
+    padding: 10px;
+    background-color: rgba(85, 85, 240, 0.764);
+
+    border: 0;
+    border-radius: 10px;
+
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+/* Стиль для общего контейнера картинок */
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+/* Стиль для карточки картинки */
+.photo-card {
+    display: flex;
+    flex-direction: column;
+    flex-basis: calc((100% - 30px) / 4);
+    padding: 10px;
+}
+
+.photo-card a {
+    /* padding: 0;
+    margin: 0; */
+    height: 307px;
+    /* flex-grow: 1; */
+}
+
+/* Стиль для фото */
+.photo {
+    width: 100%;
+    height: 307px;
+    flex-grow: 1;
+    /* object-fit: cover; */
+}
+
+/* Стиль для строки информации */
+.info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* height: 80px; */
+    padding: 5 15 5 15;
+    column-gap: 10px;
+
+    /* Установит стили правой рамки */
+    border-right-width: 1px;
+    border-right-style: solid;
+    border-right-color: #cecece;
+    
+    /* Установит стили нинжней рамки */
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #cecece;
+    
+    /* Установит стили левой рамки */
+    border-left-width: 1px;
+    border-left-style: solid;
+    border-left-color: #cecece;
+
+    /* Нижний правый угол */
+    border-bottom-right-radius: 5px;
+    
+    /* Нижний левый угол */
+    border-bottom-left-radius: 5px;
+
+    /* Нижняя тень */
+    box-shadow: 0px 5px 6px -1px rgba(0, 0, 0, 0.3);
+}
+
+/* Стиль для элемента надписи */
+.info-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
